--- a/examples/patchStrategicMerge/kustomization.yaml
+++ b/examples/patchStrategicMerge/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: sealed-secrets
 patchesStrategicMerge:
-- patches/priority-class.yaml
+- extra/priority-class.yaml
 resources:
 - sealed-secrets/templates/deployment.yaml
 - sealed-secrets/templates/role-binding.yaml
