--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
             "args": [
                 "-n",
                 "sealed-secrets",
-                "--resource-paths",
+                "--resources",
                 "sealed-secrets/templates/",
                 "--kustomization-directory",
                 "."
@@ -20,9 +20,9 @@
             "args": [
                 "-n",
                 "sealed-secrets",
-                "--resource-paths",
+                "--resources",
                 "sealed-secrets/templates/",
-                "--patches-strategic-merge-paths",
+                "--patchesStrategicMerge",
                 "patches/",
                 "--kustomization-directory",
                 ".",
@@ -38,9 +38,28 @@
             "args": [
                 "-n",
                 "sealed-secrets",
-                "--resource-paths",
+                "--resources",
                 "sealed-secrets/templates/",
-                "--common-labels",
+                "--commonAnnotations",
+                "linkerd.io/inject=enabled",
+                "annotation/iam=true",
+                "--kustomization-directory",
+                "."
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/examples/commonAnnotations",
+            "name": "Example - commonAnnotations",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "-n",
+                "sealed-secrets",
+                "--resources",
+                "sealed-secrets/templates/",
+                "--commonLabels",
                 "app.kubernetes.io/helmizer=true",
                 "app.kubernetes.io/yes=false",
                 "--kustomization-directory",
@@ -49,6 +68,47 @@
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}/examples/commonLabels",
             "name": "Example - commonLabels",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "-n",
+                "cert-manager",
+                "--resources",
+                "https://github.com/jetstack/cert-manager/releases/download/v1.1.0/cert-manager.yaml",
+                "cert-manager/templates/",
+                "--kustomization-file-name",
+                "kustomization.yml",
+                "--kustomization-directory",
+                "."
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/examples/resources",
+            "name": "Example - resources (URL)",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--help"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - help",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--version"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - version",
             "program": "${workspaceFolder}/src/helmizer.py",
             "request": "launch",
             "type": "python"
