--- a/examples/resources/kustomization.yaml
+++ b/examples/resources/kustomization.yaml
@@ -1,12 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: sealed-secrets
+patchesStrategicMerge: []
 resources:
-- sealed-secrets/templates/deployment.yaml
-- sealed-secrets/templates/role-binding.yaml
-- sealed-secrets/templates/service.yaml
 - sealed-secrets/templates/cluster-role-binding.yaml
 - sealed-secrets/templates/cluster-role.yaml
-- sealed-secrets/templates/service-account.yaml
-- sealed-secrets/templates/sealedsecret-crd.yaml
+- sealed-secrets/templates/deployment.yaml
+- sealed-secrets/templates/role-binding.yaml
 - sealed-secrets/templates/role.yaml
+- sealed-secrets/templates/sealedsecret-crd.yaml
+- sealed-secrets/templates/service-account.yaml
+- sealed-secrets/templates/service.yaml
