--- a/examples/resources/helmizer.yaml
+++ b/examples/resources/helmizer.yaml
@@ -16,12 +16,10 @@ helmizer:
   dry-run: false
   kustomization-directory: .
   kustomization-file-name: kustomization.yaml
-  resource-absolute-paths: []
+  resource-absolute-paths: false
   sort-keys: true
   version: '0.1.0'
 kustomize:
   namespace: sealed-secrets
   resources:
     - sealed-secrets/templates/
-  commonAnnotations: {}
-  commonLabels: {}
