--- a/examples/commonLabels/helmizer.yaml
+++ b/examples/commonLabels/helmizer.yaml
@@ -16,7 +16,7 @@ helmizer:
   dry-run: false
   kustomization-directory: .
   kustomization-file-name: kustomization.yaml
-  resource-absolute-paths: []
+  resource-absolute-paths: false
   sort-keys: true
   version: '0.1.0'
 kustomize:
@@ -25,7 +25,6 @@ kustomize:
     - sealed-secrets/templates/
   patchesStrategicMerge:
     - extra/
-  commonAnnotations: {}
   commonLabels:
     app.kubernetes.io/helmizer: 'true'
     app.kubernetes.io/yes: 'false'
