--- a/examples/resources/helmizer.yaml
+++ b/examples/resources/helmizer.yaml
@@ -16,10 +16,9 @@ helmizer:
   dry-run: false
   kustomization-directory: .
   kustomization-file-name: kustomization.yaml
-  resource-absolute-paths: false
   sort-keys: true
   version: '0.1.0'
 kustomize:
   namespace: sealed-secrets
   resources:
-    - sealed-secrets/templates/
+    - ./sealed-secrets/templates/
