--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,30 +3,6 @@
         {
             "args": [
                 "--debug",
-                "./examples/resources/helmizer.yaml"
-            ],
-            "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
-            "name": "Example - resources",
-            "program": "${workspaceFolder}/src/helmizer.py",
-            "request": "launch",
-            "type": "python"
-        },
-        {
-            "args": [
-                "--debug",
-                "./examples/patchesStrategicMerge/helmizer.yaml"
-            ],
-            "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
-            "name": "Example - patchesStrategicMerge",
-            "program": "${workspaceFolder}/src/helmizer.py",
-            "request": "launch",
-            "type": "python"
-        },
-        {
-            "args": [
-                "--debug",
                 "./examples/commonAnnotations/helmizer.yaml"
             ],
             "console": "integratedTerminal",
@@ -56,6 +32,162 @@
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "name": "Example - configMapGenerator",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/crds/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - crds",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/generatorOptions/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - generatorOptions",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/images/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - images",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/namePrefix/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - namePrefix",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/namespace/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - namespace",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/nameSuffix/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - nameSuffix",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/openapi/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - openapi",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/patchesJson6902/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - patchesJson6902",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/patchesStrategicMerge/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - patchesStrategicMerge",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/replacements/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - replacements",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/replicas/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - replicas",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/resources/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - resources",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/vars/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - vars",
             "program": "${workspaceFolder}/src/helmizer.py",
             "request": "launch",
             "type": "python"
