--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
-confuse==1.4.0      # https://pypi.org/project/confuse/
-PyYaml==5.4.1       # https://pypi.org/project/PyYAML/
-validators==0.18.2  # https://pypi.org/project/validators/
+# these are mostly untested guestimates, but more loose to avoid dependency hell
+confuse>=1.4.0      # https://pypi.org/project/confuse/
+PyYaml>=5.3.1       # https://pypi.org/project/PyYAML/
+validators>=0.18.0  # https://pypi.org/project/validators/
