--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,6 @@ repos:
       - id: destroyed-symlinks
       - id: detect-aws-credentials
       - id: detect-private-key
-      - id: double-quote-string-fixer
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
       - id: fix-encoding-pragma
@@ -30,4 +29,19 @@ repos:
       - id: requirements-txt-fixer
       - id: check-ast
     repo: 'git://github.com/pre-commit/pre-commit-hooks'
-    rev: v3.4.0
+    rev: v4.0.1
+  - hooks:
+      - id: black
+        language_version: python3.9
+        args:
+          - --line-length
+          - "140"
+    repo: https://github.com/psf/black
+    rev: 21.10b0
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        args:
+          - --max-line-length
+          - "140"
