--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
-# these are mostly untested guestimates, but more loose to avoid dependency hell
-confuse>=1.4.0      # https://pypi.org/project/confuse/
-PyYaml>=5.3.1       # https://pypi.org/project/PyYAML/
-validators>=0.18.0  # https://pypi.org/project/validators/
+confuse==1.6.0
+decorator==5.1.0
+PyYAML==6.0
+six==1.16.0
+validators==0.18.0
