--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
       - id: requirements-txt-fixer
       - id: check-ast
     repo: 'https://github.com/pre-commit/pre-commit-hooks'
-    rev: v4.1.0
+    rev: v4.2.0
   - hooks:
       - id: black
         language_version: python3.9
@@ -37,7 +37,7 @@ repos:
           - --line-length
           - "140"
     repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 22.3.0
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
