--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,11 @@ repos:
       - id: check-ast
     repo: 'https://github.com/pre-commit/pre-commit-hooks'
     rev: v4.3.0
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.8.2
+    hooks:
+    - id: reorder-python-imports
+      args: [--application-directories, '.:src', --py36-plus]
   - hooks:
       - id: black
         language_version: python3.9
