--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,7 @@
         {
             "args": [
                 "--debug",
+                "--no-sort-keys",
                 "./examples/commonAnnotations/helmizer.yaml"
             ],
             "console": "integratedTerminal",
@@ -176,6 +177,18 @@
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "name": "Example - resources",
+            "program": "${workspaceFolder}/src/helmizer.py",
+            "request": "launch",
+            "type": "python"
+        },
+        {
+            "args": [
+                "--debug",
+                "./examples/secretGenerator/helmizer.yaml"
+            ],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "name": "Example - secretGenerator",
             "program": "${workspaceFolder}/src/helmizer.py",
             "request": "launch",
             "type": "python"
