--- a/examples/secretGenerator/kustomization.yaml
+++ b/examples/secretGenerator/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-replicas:
-- count: 5
-  name: deployment-name
+secretGenerator:
+- files:
+  - secret/tls.cert
+  - secret/tls.key
+  name: tls
+  type: kubernetes.io/tls
