--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,24 +29,27 @@ repos:
       - id: requirements-txt-fixer
       - id: check-ast
     repo: 'https://github.com/pre-commit/pre-commit-hooks'
-    rev: v4.3.0
+    rev: v4.4.0
   - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.8.2
+    rev: v3.9.0
     hooks:
     - id: reorder-python-imports
       args: [--application-directories, '.:src', --py36-plus]
   - hooks:
       - id: black
-        language_version: python3.9
+        language_version: python3.10
         args:
           - --line-length
           - "140"
     repo: https://github.com/psf/black
-    rev: 22.6.0
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+    rev: 23.1.0
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.991
     hooks:
-      - id: flake8
-        args:
-          - --max-line-length
-          - "140"
+    - id: mypy
+      args:
+      - --check-untyped-defs
+      - --ignore-missing-imports
+      - --install-types
+      - --non-interactive
+      files: src/helmizer.py
