--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,5 @@
 name: Package Application with Pyinstaller
-on:
+"on":
   push:
     branches: [ main ]
 jobs:
@@ -26,7 +26,7 @@ jobs:
       uses: Nuitka/Nuitka-Action@main
       with:
         nuitka-version: main
-        script-name: helmizer
+        script-name: helmizer.py
         onefile: true
         working-directory: src
     - name: Upload Artifacts
